--- a/CmsL3/Views/master.cshtml
+++ b/CmsL3/Views/master.cshtml
@@ -10,9 +10,12 @@
 <link rel="stylesheet" href="~/Content/bootstrap.min.css" />
 <script src="~/Scripts/jquery-3.5.1.min.js"></script>
 <script src="~/Scripts/bootstrap.bundle.min.js"></script>
-@Umbraco.RenderMacro("mainmenu")
+
+
+
 </header>
 
+@Umbraco.RenderMacro("navigation")
 @RenderBody()
 
 <footer></footer>
